<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wins"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/lbl_draws"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/draws"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_draws"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/lbl_losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/losses"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_option" />

    <Button
        android:id="@+id/btn_rock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rock" />

    <Button
        android:id="@+id/btn_paper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paper" />

    <Button
        android:id="@+id/btn_scissors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scissors" />

    <Button
        android:id="@+id/btn_lizard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lizard" />

    <Button
        android:id="@+id/btn_spock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spock" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_p1choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/p1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_p1Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_computer_Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/computer"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_computerChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

</LinearLayout>